concord_macros/tests/trybuild/fail/codegen/ws_non_websocket_response.rs
use concord_macros::api;

api! {
    client WsNonWebSocketResponseApi {
        base "https://example.com"
    }

    WS Connect
        path ["connect"]
        -> Json<String>
}

fn main() {}
