concord_macros/tests/trybuild/fail/codegen/ws_non_websocket_response.stderr
error: `WS` endpoints must return `WebSocket<Out, In>`
  --> tests/trybuild/fail/codegen/ws_non_websocket_response.rs:10:12
   |
10 |         -> Json<String>
   |            ^^^^
